# TD_POO_Lozes

./: .gitignore  CMakeLists.txt  plot.gp
src/: CMakeLists.txt  Equation.cpp  Equation.hpp  Problem.cpp  Problem.hpp  TimeDiscretization.cpp  TimeDiscretization.hpp  Timer.cpp  Timer.hpp  Variable.cpp  Variable.hpp  main.cpp
tests/: CMakeLists.txt  Equation_test.cpp  Integration_test.cpp  TimeDiscretization_test.cpp  Variable_test.cpp
